@@ -5149,28 +5149,16 @@ block|}
 catch|catch
 parameter_list|(
 name|IllegalAccessException
-name|iae
-parameter_list|)
-block|{
-name|Rethrow
-operator|.
-name|rethrow
-argument_list|(
-name|iae
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
+decl||
 name|InstantiationException
-name|ie
+name|iae
 parameter_list|)
 block|{
 name|Rethrow
 operator|.
 name|rethrow
 argument_list|(
-name|ie
+name|iae
 argument_list|)
 expr_stmt|;
 block|}
