@@ -291,19 +291,7 @@ block|}
 catch|catch
 parameter_list|(
 name|AnalysisEngineProcessException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|IOException
-argument_list|(
-name|e
-argument_list|)
-throw|;
-block|}
-catch|catch
-parameter_list|(
+decl||
 name|ResourceInitializationException
 name|e
 parameter_list|)
