@@ -1006,28 +1006,16 @@ block|}
 catch|catch
 parameter_list|(
 name|SAXException
-name|sae
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-name|sae
-argument_list|)
-throw|;
-block|}
-catch|catch
-parameter_list|(
+decl||
 name|IOException
-name|ioe
+name|sae
 parameter_list|)
 block|{
 throw|throw
 operator|new
 name|RuntimeException
 argument_list|(
-name|ioe
+name|sae
 argument_list|)
 throw|;
 block|}
