@@ -879,23 +879,9 @@ block|}
 catch|catch
 parameter_list|(
 name|ArrayIndexOutOfBoundsException
-name|aioobe
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|EOFException
-argument_list|(
-literal|"seek past EOF: "
-operator|+
-name|this
-argument_list|)
-throw|;
-block|}
-catch|catch
-parameter_list|(
+decl||
 name|IllegalArgumentException
-name|iae
+name|e
 parameter_list|)
 block|{
 throw|throw
@@ -1061,23 +1047,9 @@ block|}
 catch|catch
 parameter_list|(
 name|ArrayIndexOutOfBoundsException
-name|aioobe
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|EOFException
-argument_list|(
-literal|"seek past EOF: "
-operator|+
-name|this
-argument_list|)
-throw|;
-block|}
-catch|catch
-parameter_list|(
+decl||
 name|IllegalArgumentException
-name|iae
+name|aioobe
 parameter_list|)
 block|{
 throw|throw
