@@ -3474,28 +3474,16 @@ block|}
 catch|catch
 parameter_list|(
 name|IllegalAccessException
-name|iae
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-name|iae
-argument_list|)
-throw|;
-block|}
-catch|catch
-parameter_list|(
+decl||
 name|InvocationTargetException
-name|ite
+name|iae
 parameter_list|)
 block|{
 throw|throw
 operator|new
 name|RuntimeException
 argument_list|(
-name|ite
+name|iae
 argument_list|)
 throw|;
 block|}
